WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65131
[chromium] incorrect vertex shader used when rendering video layer
https://bugs.webkit.org/show_bug.cgi?id=65131
Summary
[chromium] incorrect vertex shader used when rendering video layer
David Reveman
Reported
2011-07-25 13:49:51 PDT
CCVideoLayerImpl is currently using the same vertex program as the tiler. This program uses a 'point' uniform to generate vertex coordinates but CCVideoLayerImpl never sets this uniform.
Attachments
Patch
(5.44 KB, patch)
2011-07-25 13:55 PDT
,
David Reveman
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Reveman
Comment 1
2011-07-25 13:55:33 PDT
Created
attachment 101904
[details]
Patch
James Robinson
Comment 2
2011-07-25 14:07:45 PDT
Comment on
attachment 101904
[details]
Patch OK. We really should have some sort of test coverage to test this.
WebKit Review Bot
Comment 3
2011-07-25 16:27:41 PDT
Comment on
attachment 101904
[details]
Patch Clearing flags on attachment: 101904 Committed
r91720
: <
http://trac.webkit.org/changeset/91720
>
WebKit Review Bot
Comment 4
2011-07-25 16:27:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug