[Chromium] Use correct vertex shader when rendering video layer. https://bugs.webkit.org/show_bug.cgi?id=65131

Patch by David Reveman <reveman@chromium.org> on 2011-07-25
Reviewed by James Robinson.

Add new VertexShaderQuad program that is used by LayerTilerChromium.
Change VertexShaderPosTexTransform so it works with CCVideoLayerImpl.

* platform/graphics/chromium/LayerTilerChromium.h:
* platform/graphics/chromium/ShaderChromium.cpp:
(WebCore::VertexShaderPosTexTransform::VertexShaderPosTexTransform):
(WebCore::VertexShaderPosTexTransform::init):
(WebCore::VertexShaderPosTexTransform::getShaderString):
(WebCore::VertexShaderQuad::VertexShaderQuad):
(WebCore::VertexShaderQuad::init):
(WebCore::VertexShaderQuad::getShaderString):
* platform/graphics/chromium/ShaderChromium.h:
(WebCore::VertexShaderQuad::matrixLocation):
(WebCore::VertexShaderQuad::texTransformLocation):

Canonical link: https://commits.webkit.org/80891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91720 268f45cc-cd09-0410-ab3c-d52691b4dbfc